<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/llEmpregador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/llCodigoEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stvCodigo" />

            <EditText
                android:id="@+id/etCodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNomeEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stvNome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEnderecoEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stvEndereco" />

            <EditText
                android:id="@+id/etEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llNumeroEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvNumero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stvNumero" />

            <EditText
                android:id="@+id/etNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCnpjEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvCnpj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stvCnpj" />

            <EditText
                android:id="@+id/etCnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llButtonEmpregador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btConsutar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtConsultar" />

            <Button
                android:id="@+id/btSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtSalvar" />

            <Button
                android:id="@+id/btLimpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtLimpar" />

            <Button
                android:id="@+id/btDeletar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sbtDeletar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>